# declutter

./: .gitignore  Cargo.toml  README.md  declutter.yaml
.github/workflows/: release.yml
src/: lib.rs  main.rs
